--- a/index.html
+++ b/index.html
@@ -11,71 +11,144 @@
     <header>
       <nav>
         <ul>
-          <li>Search</li>
-          <li>Won Hundred</li>
-          <li>Shopping Bag (0)</li>
+          <li>Nail Studios</li>
+          <li>Shop Polish</li>
+        </ul>
+        <ul>
           <li>Journal</li>
-          <li>Women</li>
-          <li>Men</li>
-          <li>Currency</li>
         </ul>
       </nav>
     </header>
+
     <main>
-      <h1>Spring Summer – Volume 2</h1>
-      <h6>
-        Get your wardrobe ready for those upcoming warm spring days with our
-        second delivery of Spring Summer 20.
-      </h6>
       <div class="hero">
-        <div class="hero__img"></div>
-        <div class="hero__img"></div>
-        <div class="hero__img"></div>
-        <div class="hero__img"></div>
+        <h4>The Uptown Collection</h4>
+        <h3>
+          Meet our newest nails, designed in collaboration with our friends on
+          the Upper East Side.
+        </h3>
+        <a href="#">Read More</a>
       </div>
-      <section class="arrivals">
-        <h4 class="arrivals__title">
-          Selected New Arrivals
-        </h4>
-        <div class="wrapper">
-          <article class="product">
-            <div class="product__photo"></div>
-            <div class="product__data">
-              <span class="name">Jonah Shirt - Zen Blue</span>
-              <span class="price">900 DKK</span>
-            </div>
-          </article>
-          <article class="product">
-            <div class="product__photo"></div>
-            <div class="product__data">
-              <span class="name">Jonah Shirt - Zen Blue</span>
-              <span class="price">900 DKK</span>
-            </div>
-          </article>
-          <article class="product">
-            <div class="product__photo"></div>
-            <div class="product__data">
-              <span class="name">Jonah Shirt - Zen Blue</span>
-              <span class="price">900 DKK</span>
-            </div>
-          </article>
-          <article class="product">
-            <div class="product__photo"></div>
-            <div class="product__data">
-              <span class="name">Jonah Shirt - Zen Blue</span>
-              <span class="name">900 DKK</span>
-            </div>
-          </article>
-          <span class="arrivals__category">Shop Women's New Arrivals</span>
-          <span class="arrivals__category">Shop Men's New Arrivals</span>
+
+      <section class="under-hero">
+        <img
+          src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/Like_French_-_Blog_Photo-3_1600x1600_crop_center.jpg?v=1635790977"
+        />
+        <div class="under-hero__content">
+          <div class="wrapper">
+            <h4>The Studio</h4>
+            <h3>
+              Book a manicure at our Soho flagship studio or our new Uptown
+              studio, 20 East 69th Street at Madison Avenue.
+            </h3>
+            <a href="#">Book a Manicure</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="blog">
+        <article class="blog__post">
+          <img
+            src="https://images.unsplash.com/photo-1583307266943-e0055bb40037?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1421&q=80"
+          />
+          <div class="post__content">
+            <span class="post__date">Feb 25, 2020</span>
+            <h4>New and Now: The Uptown Collection</h4>
+            <a href="#">Read Story</a>
+          </div>
+        </article>
+        <article class="blog__post">
+          <img
+            src="https://images.unsplash.com/photo-1583255448430-17c5eda08e5c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+          />
+          <div class="post__content">
+            <span class="post__date">Feb 25, 2020</span>
+            <h4>New and Now: The Uptown Collection</h4>
+            <a href="#">Read Story</a>
+          </div>
+        </article>
+        <article class="blog__post">
+          <img
+            src="https://images.unsplash.com/photo-1583307266943-e0055bb40037?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1421&q=80"
+          />
+          <div class="post__content">
+            <span class="post__date">Feb 25, 2020</span>
+            <h4>New and Now: The Uptown Collection</h4>
+            <a href="#">Read Story</a>
+          </div>
+        </article>
+      </section>
+
+      <section class="gallery">
+        <div class="gallery__poster">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
+          />
+        </div>
+        <div class="gallery__poster">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
+          />
+        </div>
+        <div class="gallery__poster">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
+          />
+        </div>
+        <div class="gallery__poster">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
+          />
+        </div>
+        <div class="gallery__poster">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
+          />
+        </div>
+        <div class="gallery__poster">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
+          />
+        </div>
+        <div class="gallery__poster">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
+          />
+        </div>
+        <div class="gallery__poster">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
+          />
         </div>
       </section>
     </main>
-    <footer>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+
+    <footer class="footer">
+      <div class="footer__column">
+        <span class="column__title">Support</span>
+        <ul>
+          <li>F.A.Q.</li>
+          <li>Privacy Policu</li>
+          <li>Terms and Conditions</li>
+          <li>Accessibility</li>
+        </ul>
+      </div>
+      <div class="footer__column">
+        <span class="column__title">Follow Us</span>
+        <ul>
+          <li>Instagram</li>
+          <li>Twitter</li>
+        </ul>
+      </div>
+      <div class="footer__column">
+        <span class="column__title">Support</span>
+        <ul>
+          <li>F.A.Q.</li>
+          <li>Privacy Policu</li>
+          <li>Terms and Conditions</li>
+          <li>Accessibility</li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
