--- a/10x19-coding/index.html
+++ b/10x19-coding/index.html
@@ -7,5 +7,30 @@
     <link rel="stylesheet" href="dist/css/styles.css" />
     <title>(S)CSS Masterclass</title>
   </head>
-  <body></body>
+  <body>
+    <div class="layout">
+      <div>10X19</div>
+      <div></div>
+      <div>MENU</div>
+      <div class="layout__left">#10</div>
+      <div class="layout__left">#9</div>
+      <div class="layout__left">#8</div>
+      <div class="layout__left">#7</div>
+      <div class="layout__left">#6</div>
+      <article>
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgolBdeaXdt7hZ4G28YiA8shOCg4jkBg08uA&usqp=CAU"
+          alt="dog"
+        />
+      </article>
+      <div class="layout__right">#5</div>
+      <div class="layout__right">#4</div>
+      <div class="layout__right">#3</div>
+      <div class="layout__right">#2</div>
+      <div class="layout__right">#1</div>
+      <div></div>
+      <div>THIS IS A BORDER RIGHT STYLE SOLID MAYBE GOOD YEAH A HELL GOOD</div>
+      <div></div>
+    </div>
+  </body>
 </html>
