--- a/10x19-coding/index.html
+++ b/10x19-coding/index.html
@@ -8,29 +8,30 @@
     <title>(S)CSS Masterclass</title>
   </head>
   <body>
-    <div class="layout">
-      <div>10X19</div>
-      <div></div>
-      <div>MENU</div>
-      <div class="layout__left">#10</div>
-      <div class="layout__left">#9</div>
-      <div class="layout__left">#8</div>
-      <div class="layout__left">#7</div>
-      <div class="layout__left">#6</div>
-      <article>
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgolBdeaXdt7hZ4G28YiA8shOCg4jkBg08uA&usqp=CAU"
-          alt="dog"
-        />
-      </article>
-      <div class="layout__right">#5</div>
-      <div class="layout__right">#4</div>
-      <div class="layout__right">#3</div>
-      <div class="layout__right">#2</div>
-      <div class="layout__right">#1</div>
-      <div></div>
-      <div>THIS IS A BORDER RIGHT STYLE SOLID MAYBE GOOD YEAH A HELL GOOD</div>
-      <div></div>
+    <span></span>
+    <span></span>
+    <span class="menu">Menu</span>
+    <div class="number__row">
+      <div class="number">#10</div>
+      <div class="number">#9</div>
+      <div class="number">#8</div>
+      <div class="number">#7</div>
+      <div class="number">#6</div>
     </div>
-  </body>
+    <div class="number__row">
+      <div class="number">#5</div>
+      <div class="number">#4</div>
+      <div class="number">#3</div>
+      <div class="number">#2</div>
+      <div class="number">#1</div>
+    </div>
+    <div class="center-image"></div>
+    <span></span>
+    <div class="scrolling__text">
+      <span
+        >This is a very long text that should scroll using CSS3 Animations and
+        not JS</span
+      >
+    </div>
+    <span></span>
 </html>
