--- a/zoo/index.html
+++ b/zoo/index.html
@@ -8,36 +8,109 @@
   </head>
   <body>
     <header>
-      <div>header-1</div>
-      <div>header-2</div>
+      <nav>
+        <ul>
+          <li>Zoo</li>
+          <li>Contact</li>
+          <li>Team</li>
+          <li>Clients</li>
+        </ul>
+        <ul>
+          <li>Projects</li>
+          <li>Tous</li>
+        </ul>
+      </nav>
     </header>
-
     <main>
       <article>
-        <img
-          src="http://www.z-o-o.fr/thumbs/works/chateau-d-ecouen-musee-national-de-la-renaissance/crop_cover-800x533-q80.jpg"
-          alt="img"
-        />
-        <div>title</div>
+        <img src="https://source.unsplash.com/random/450x450" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
       </article>
       <article>
-        <div>img</div>
-        <div>title</div>
+        <img src="https://source.unsplash.com/random/450x451" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
       </article>
       <article>
-        <div>img</div>
-        <div>title</div>
+        <img src="https://source.unsplash.com/random/450x452" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
       </article>
       <article>
-        <div>img</div>
-        <div>title</div>
+        <img src="https://source.unsplash.com/random/450x453" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
       </article>
       <article>
-        <img
-          src="http://www.z-o-o.fr/thumbs/works/chateau-d-ecouen-musee-national-de-la-renaissance/crop_cover-800x533-q80.jpg"
-          alt="img"
-        />
-        <div>title</div>
+        <img src="https://source.unsplash.com/random/450x454" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
+      </article>
+      <article>
+        <img src="https://source.unsplash.com/random/450x455" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
+      </article>
+      <article>
+        <img src="https://source.unsplash.com/random/450x456" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
+      </article>
+      <article>
+        <img src="https://source.unsplash.com/random/450x457" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
+      </article>
+      <article>
+        <img src="https://source.unsplash.com/random/450x458" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
+      </article>
+      <article>
+        <img src="https://source.unsplash.com/random/450x459" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
+      </article>
+      <article>
+        <img src="https://source.unsplash.com/random/450x460" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
+      </article>
+      <article>
+        <img src="https://source.unsplash.com/random/450x461" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
+      </article>
+      <article>
+        <img src="https://source.unsplash.com/random/450x462" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
+      </article>
+      <article>
+        <img src="https://source.unsplash.com/random/450x463" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
+      </article>
+      <article>
+        <img src="https://source.unsplash.com/random/450x464" />
+        <div>
+          <h3>Moco Montpellier Contemporain</h3>
+        </div>
       </article>
     </main>
   </body>
