--- a/rodic-davidson/index.html
+++ b/rodic-davidson/index.html
@@ -9,146 +9,108 @@
   </head>
   <body>
     <header>
+      <div class="title">Rodić Davidson <span>Architects</span></div>
       <nav>
         <ul>
-          <li>Nail Studios</li>
-          <li>Shop Polish</li>
-        </ul>
-        <ul>
-          <li>Journal</li>
+          <li>Project</li>
+          <li>Practice</li>
+          <li>Expertise</li>
+          <li>News</li>
+          <li>Exhibition</li>
+          <li>Contact</li>
         </ul>
       </nav>
     </header>
-
     <main>
-      <div class="hero">
-        <h4>The Uptown Collection</h4>
-        <h3>
-          Meet our newest nails, designed in collaboration with our friends on
-          the Upper East Side.
-        </h3>
-        <a href="#">Read More</a>
-      </div>
-
-      <section class="under-hero">
-        <img
-          src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/Like_French_-_Blog_Photo-3_1600x1600_crop_center.jpg?v=1635790977"
-        />
-        <div class="under-hero__content">
-          <div class="wrapper">
-            <h4>The Studio</h4>
-            <h3>
-              Book a manicure at our Soho flagship studio or our new Uptown
-              studio, 20 East 69th Street at Madison Avenue.
-            </h3>
-            <a href="#">Book a Manicure</a>
-          </div>
-        </div>
+      <section class="main__section__first">
+        <p>
+          Rodić Davidson: London Architecture
+          <br />
+          Our Bloomsbury based practice has been working in central London since
+          2006. Having worked within the oldest areas of London, we have
+          developed an expertise in historic buildings. These are often Listed
+          and situated within a Conservation Area. Our knowledge and experience
+          consistently secure Planning Consents, Listed Building Consents and
+          Great Estate Licenses.
+          <br /><br />
+          Many areas within central London boroughs were originally developed by
+          aristocratic families (examples being Grosvenor, Cadogan, De Walden,
+          Portman and Bedford), and these family estates still own large swathes
+          of, what is now commonly referred to as, Prime Central London. These
+          Great Estates maintain significant influence either through direct
+          ownership or through various stewardship schemes, an example being the
+          Belgrave Estate Management Scheme administered by Grosvenor. Schemes
+          such as this enable the Estate to exert control over the use,
+          development, and appearance of the designated area.
+          <br /><br />
+          We have a growing body of new-build work in Prime Central London and
+          elsewhere the UK. Through sensitive, contextual design and iterative
+          dialogue with Clients and Planners, Rodić Davidson have established a
+          track record of obtaining difficult planning consents for both
+          new-build and existing properties.
+        </p>
+        <div class="image"></div>
       </section>
 
-      <section class="blog">
-        <article class="blog__post">
-          <img
-            src="https://images.unsplash.com/photo-1583307266943-e0055bb40037?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1421&q=80"
-          />
-          <div class="post__content">
-            <span class="post__date">Feb 25, 2020</span>
-            <h4>New and Now: The Uptown Collection</h4>
-            <a href="#">Read Story</a>
-          </div>
-        </article>
-        <article class="blog__post">
-          <img
-            src="https://images.unsplash.com/photo-1583255448430-17c5eda08e5c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-          />
-          <div class="post__content">
-            <span class="post__date">Feb 25, 2020</span>
-            <h4>New and Now: The Uptown Collection</h4>
-            <a href="#">Read Story</a>
-          </div>
-        </article>
-        <article class="blog__post">
-          <img
-            src="https://images.unsplash.com/photo-1583307266943-e0055bb40037?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1421&q=80"
-          />
-          <div class="post__content">
-            <span class="post__date">Feb 25, 2020</span>
-            <h4>New and Now: The Uptown Collection</h4>
-            <a href="#">Read Story</a>
-          </div>
-        </article>
+      <section class="main__section__first">
+        <p>
+          Rodić Davidson: London Architecture
+          <br />
+          Our Bloomsbury based practice has been working in central London since
+          2006. Having worked within the oldest areas of London, we have
+          developed an expertise in historic buildings. These are often Listed
+          and situated within a Conservation Area. Our knowledge and experience
+          consistently secure Planning Consents, Listed Building Consents and
+          Great Estate Licenses.
+          <br /><br />
+          Many areas within central London boroughs were originally developed by
+          aristocratic families (examples being Grosvenor, Cadogan, De Walden,
+          Portman and Bedford), and these family estates still own large swathes
+          of, what is now commonly referred to as, Prime Central London. These
+          Great Estates maintain significant influence either through direct
+          ownership or through various stewardship schemes, an example being the
+          Belgrave Estate Management Scheme administered by Grosvenor. Schemes
+          such as this enable the Estate to exert control over the use,
+          development, and appearance of the designated area.
+          <br /><br />
+          We have a growing body of new-build work in Prime Central London and
+          elsewhere the UK. Through sensitive, contextual design and iterative
+          dialogue with Clients and Planners, Rodić Davidson have established a
+          track record of obtaining difficult planning consents for both
+          new-build and existing properties.
+        </p>
+        <div class="image"></div>
       </section>
 
-      <section class="gallery">
-        <div class="gallery__poster">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
-          />
-        </div>
-        <div class="gallery__poster">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
-          />
-        </div>
-        <div class="gallery__poster">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
-          />
-        </div>
-        <div class="gallery__poster">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
-          />
-        </div>
-        <div class="gallery__poster">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
-          />
-        </div>
-        <div class="gallery__poster">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
-          />
-        </div>
-        <div class="gallery__poster">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
-          />
-        </div>
-        <div class="gallery__poster">
-          <img
-            src="https://cdn.shopify.com/s/files/1/0086/4865/4895/files/PAINTBOX-UES_0027_copy_1600x1600_crop_center.jpg?v=1628778916"
-          />
-        </div>
+      <section class="main__section__first">
+        <p>
+          Rodić Davidson: London Architecture
+          <br />
+          Our Bloomsbury based practice has been working in central London since
+          2006. Having worked within the oldest areas of London, we have
+          developed an expertise in historic buildings. These are often Listed
+          and situated within a Conservation Area. Our knowledge and experience
+          consistently secure Planning Consents, Listed Building Consents and
+          Great Estate Licenses.
+          <br /><br />
+          Many areas within central London boroughs were originally developed by
+          aristocratic families (examples being Grosvenor, Cadogan, De Walden,
+          Portman and Bedford), and these family estates still own large swathes
+          of, what is now commonly referred to as, Prime Central London. These
+          Great Estates maintain significant influence either through direct
+          ownership or through various stewardship schemes, an example being the
+          Belgrave Estate Management Scheme administered by Grosvenor. Schemes
+          such as this enable the Estate to exert control over the use,
+          development, and appearance of the designated area.
+          <br /><br />
+          We have a growing body of new-build work in Prime Central London and
+          elsewhere the UK. Through sensitive, contextual design and iterative
+          dialogue with Clients and Planners, Rodić Davidson have established a
+          track record of obtaining difficult planning consents for both
+          new-build and existing properties.
+        </p>
+        <div class="image"></div>
       </section>
     </main>
-
-    <footer class="footer">
-      <div class="footer__column">
-        <span class="column__title">Support</span>
-        <ul>
-          <li>F.A.Q.</li>
-          <li>Privacy Policu</li>
-          <li>Terms and Conditions</li>
-          <li>Accessibility</li>
-        </ul>
-      </div>
-      <div class="footer__column">
-        <span class="column__title">Follow Us</span>
-        <ul>
-          <li>Instagram</li>
-          <li>Twitter</li>
-        </ul>
-      </div>
-      <div class="footer__column">
-        <span class="column__title">Support</span>
-        <ul>
-          <li>F.A.Q.</li>
-          <li>Privacy Policu</li>
-          <li>Terms and Conditions</li>
-          <li>Accessibility</li>
-        </ul>
-      </div>
-    </footer>
   </body>
 </html>
