--- a/beige/index.html
+++ b/beige/index.html
@@ -3,9 +3,138 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="dist/css/reset.css" />
     <link rel="stylesheet" href="dist/css/styles.css" />
     <title>(S)CSS Masterclass</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>BEIGE</h1>
+      <nav>
+        <ul>
+          <li>MODE</li>
+          <li>MODE</li>
+          <li>MODE</li>
+          <li>MODE</li>
+          <li>MODE</li>
+          <li>MODE</li>
+          <li>MODE</li>
+        </ul>
+      </nav>
+      <nav>
+        <ul>
+          <li>🔍</li>
+          <li>🔍</li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <article>
+        <div>
+          <p>9. Sep 2022</p>
+          <p>Super Mahns</p>
+        </div>
+        <div>
+          <img src="https://source.unsplash.com/random/" alt="img" />
+        </div>
+        <div>
+          <p>Best-of</p>
+          <p>Developer</p>
+        </div>
+      </article>
+      <article>
+        <div>
+          <p>9. Sep 2022</p>
+          <p>Super Mahns</p>
+        </div>
+        <div>
+          <img src="https://source.unsplash.com/random/" alt="img" />
+        </div>
+        <div>
+          <p>Best-of</p>
+          <p>Developer</p>
+        </div>
+      </article>
+      <article>
+        <div>
+          <p>9. Sep 2022</p>
+          <p>Super Mahns</p>
+        </div>
+        <div>
+          <img src="https://source.unsplash.com/random/" alt="img" />
+        </div>
+        <div>
+          <p>Best-of</p>
+          <p>Developer</p>
+        </div>
+      </article>
+      <article>
+        <div>
+          <p>9. Sep 2022</p>
+          <p>Super Mahns</p>
+        </div>
+        <div>
+          <img src="https://source.unsplash.com/random/" alt="img" />
+        </div>
+        <div>
+          <p>Best-of</p>
+          <p>Developer</p>
+        </div>
+      </article>
+      <article>
+        <div>
+          <p>9. Sep 2022</p>
+          <p>Super Mahns</p>
+        </div>
+        <div>
+          <img src="https://source.unsplash.com/random/" alt="img" />
+        </div>
+        <div>
+          <p>Best-of</p>
+          <p>Developer</p>
+        </div>
+      </article>
+      <article>
+        <div>
+          <p>9. Sep 2022</p>
+          <p>Super Mahns</p>
+        </div>
+        <div>
+          <img src="https://source.unsplash.com/random/" alt="img" />
+        </div>
+        <div>
+          <p>Best-of</p>
+          <p>Developer</p>
+        </div>
+      </article>
+      <article>
+        <div>
+          <p>9. Sep 2022</p>
+          <p>Super Mahns</p>
+        </div>
+        <div>
+          <img src="https://source.unsplash.com/random/" alt="img" />
+        </div>
+        <div>
+          <p>Best-of</p>
+          <p>Developer</p>
+        </div>
+      </article>
+    </main>
+    <footer>
+      <section><p>super mahns</p></section>
+      <section>
+        <ul>
+          <li>Facebook</li>
+          <li>Instagram</li>
+          <li>Twitter</li>
+        </ul>
+        <ul>
+          <li>Facebook</li>
+          <li>Instagram</li>
+          <li>Twitter</li>
+        </ul>
+      </section>
+    </footer>
+  </body>
 </html>
