--- a/beige/index.html
+++ b/beige/index.html
@@ -30,95 +30,22 @@
 
     <main>
       <article>
-        <div>
+        <div class="normal">
           <p>9. Sep 2022</p>
           <p>Super Mahns</p>
         </div>
-        <div>
+        <div class="normal">
           <img src="https://source.unsplash.com/random/" alt="img" />
         </div>
-        <div>
+        <div class="normal">
           <p>Best-of</p>
           <p>Developer</p>
         </div>
-      </article>
-      <article>
-        <div>
-          <p>9. Sep 2022</p>
-          <p>Super Mahns</p>
-        </div>
-        <div>
+        <div class="hovered"></div>
+        <div class="hovered">
           <img src="https://source.unsplash.com/random/" alt="img" />
         </div>
-        <div>
-          <p>Best-of</p>
-          <p>Developer</p>
-        </div>
-      </article>
-      <article>
-        <div>
-          <p>9. Sep 2022</p>
-          <p>Super Mahns</p>
-        </div>
-        <div>
-          <img src="https://source.unsplash.com/random/" alt="img" />
-        </div>
-        <div>
-          <p>Best-of</p>
-          <p>Developer</p>
-        </div>
-      </article>
-      <article>
-        <div>
-          <p>9. Sep 2022</p>
-          <p>Super Mahns</p>
-        </div>
-        <div>
-          <img src="https://source.unsplash.com/random/" alt="img" />
-        </div>
-        <div>
-          <p>Best-of</p>
-          <p>Developer</p>
-        </div>
-      </article>
-      <article>
-        <div>
-          <p>9. Sep 2022</p>
-          <p>Super Mahns</p>
-        </div>
-        <div>
-          <img src="https://source.unsplash.com/random/" alt="img" />
-        </div>
-        <div>
-          <p>Best-of</p>
-          <p>Developer</p>
-        </div>
-      </article>
-      <article>
-        <div>
-          <p>9. Sep 2022</p>
-          <p>Super Mahns</p>
-        </div>
-        <div>
-          <img src="https://source.unsplash.com/random/" alt="img" />
-        </div>
-        <div>
-          <p>Best-of</p>
-          <p>Developer</p>
-        </div>
-      </article>
-      <article>
-        <div>
-          <p>9. Sep 2022</p>
-          <p>Super Mahns</p>
-        </div>
-        <div>
-          <img src="https://source.unsplash.com/random/" alt="img" />
-        </div>
-        <div>
-          <p>Best-of</p>
-          <p>Developer</p>
-        </div>
+        <div class="hovered"></div>
       </article>
     </main>
     <footer>
